# pystream

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: codecov.yml  dependabot.yml  pull_request_template.md
.github/workflows/: ci-cd.yml  publish.yml  pypi-publish.yml
scripts/: new-version.sh
src/pystream_collections/: __init__.py  async_stream.py  base.py  enums.py  operation_type.py  stream.py  typedef.py
src/tests/: test_async_stream.py  test_stream.py
tests/: test_async_stream.py  test_stream.py
