[tool.poetry]
name = "pystream_collections"
version = "0.2.1"
description = "A helper library to manage collections more easily"
authors = ["Mariano Anaya <mariano_anaya@yahoo.com.ar>"]
readme = "README.md"
license = "MIT"

[project]
name = "pystream_collections"
description = "A helper library to manage collections more easily"
version = "0.1"
readme = "README.md"
license = "MIT"

[project.urls]
Source = "https://github.com/rmariano/pystream"

[tool.poetry.dependencies]
python = "^3.12"

pytest-cov = ">=5,<7"
[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
ruff = ">=0.3,<0.8"
pyright = "^1.1.352"
pytest-cov = ">=5,<7"
pytest-asyncio = ">=0.23.7,<0.25.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "C901", "I", "D", "N", "W", "ANN001", "ANN201", "ANN202", "ANN204", "ANN205", "ANN206", "ANN401"]
ignore = ["D203", "D212"]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
